# serializer version: 1
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rx0',
    'unique_id': '000123456789_RX0',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4K59.937 593MHz 422 BT2020 12b 2.2',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sink1',
    'unique_id': '000123456789_SINK1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Signify FCD: 4K60 444 DV HDR10+ HLG',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_11-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_11',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sink2',
    'unique_id': '000123456789_SINK2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_11-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Bose CineMate: 4K60 420 ',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_12-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_12',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'edida0',
    'unique_id': '000123456789_EDIDA0',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_12-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_12',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'MAT Atmos, DD Atmos, DD, DTS:X+IMAX, DTSHD, DTS, LPCM 2.0 192kHz 24b',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_13-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_13',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'edida1',
    'unique_id': '000123456789_EDIDA1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_13-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_13',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DD, DTS, LPCM 2.0 48kHz 24b',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_14-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_14',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'edida2',
    'unique_id': '000123456789_EDIDA2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_14-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_14',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DD, DTS, LPCM 7.1 96kHz 24b',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rx1',
    'unique_id': '000123456789_RX1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'no signal',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tx0',
    'unique_id': '000123456789_TX0',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4K59.937 593MHz 422 BT2020 12b 2.2',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tx1',
    'unique_id': '000123456789_TX1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4K59.937 593MHz 422 BT2020 12b 2.2',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aud0',
    'unique_id': '000123456789_AUD0',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'bitstream 48kHz',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aud1',
    'unique_id': '000123456789_AUD1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'bitstream 48kHz',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'audout',
    'unique_id': '000123456789_AUDOUT',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'bitstream 48kHz',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'earcrx',
    'unique_id': '000123456789_EARCRX',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'eARC/ARC not active',
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sink0',
    'unique_id': '000123456789_SINK0',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hdfury_vrroom_02_none_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hdfury_vrroom_02_none_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LG TV SSCR2: 4K120 444 FRL6 VRR DSC ALLM DV HDR10 HLG',
  })
# ---
